# Actix-Learning

./: Cargo.toml  Dockerfile
.cargo/: config.toml
.sqlx/: query-4b343bd1e728a06bc1f65a121e15de3e7944fc5a6c4a81a7c30d64fe1b0a2cdd.json
configuration/: base.yaml
migrations/: 20250803192034_create_subscriptions_table.sql  20260116190226_create_subscription_tokens_table.sql
scripts/: init_db.sh
src/: configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
tests/api/: helpers.rs  subscriptions.rs  subscriptions_confirm.rs
